NMethod state machine is not monotonic

XMLWordPrintable

    • b31

        When two concurrent threads request different nmethod state transitions with different levels of dead, it sometimes happens that monotonicity of the state transitions is lost, and as a result, nmethods may resurrect in unfortunate races, and cause the VM to crash.

        Today, it is up to the caller to know if there could be any racing transitions, but it is very easy to slip. I can see a few examples of such slippage.

        However, the state transitions really should be monotonic; an nmethod is always be at least as dead as the most dead state requested.

              Assignee:
              Erik Österlund
              Reporter:
              Erik Österlund
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: