8224674: NMethod state machine is not monotonic

Reviewed-by: dlong, coleenp, thartmann